# horoscofox-service

./: .gitignore  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  compiledb.sh  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
horoscofox/: Dockerfile  Pipfile
horoscofox-service/: Dockerfile  Pipfile  pyproject.toml  requirements.txt  runtest.sh  zappa_settings.json
horoscofox-service/src/: app.py  connection.py  documents.py  logger.py  managers.py  settings.example.py  settings.py  tests.py  urls.py  utils.py  views.py
horoscofox-service/src/managers/: __init__.py  astrologer.py  date.py
horoscofox-service/src/managers/database/: dynamodb.py  dynamongorm.py  exceptions.py  horoscope.py  mongo.py
horoscofox-service/src/project/: models.py
horoscofox-service/src/project/migrations/: 0001_initial.py
horoscofox-service/src/tests/: test_horoscope.py  test_incorrect_url.py  test_managers.py  test_settings.py
horoscofox-service/tests/: test_horoscope.py  test_incorrect_url.py  test_managers.py
horoscofox-service/utils/: entrypoint-wait-for-postgres.sh  pre-deploy-commands.sh
