[tool.poetry]
name = "horoscofox-service"
version = "1.1.2"
description = ""
authors = ["Owanesh"]
license = "MIT"
homepage = "https://horoscofox.github.io"
repository = "https://github.com/horoscofox/horoscofox-service"

[tool.poetry.dependencies]
python = ">=3.6.0 , <4.0"
apistar = ">=0.4.0 <0.5.41"
boto3 = "^1.17.38"
horoscofox = {git = "https://github.com/horoscofox/pyhoroscofox.git"}
zappa = "^0.52.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
aws-sam-cli = "^1.21.1"
pytest-mock = "^3.5.1"
pytest = "^6.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
